# Tutorial

./: .gitignore  AGENTS.md  justfile  main.py  pyproject.toml
.agents/skills/commit-progress/: SKILL.md
.agents/skills/demo-insertion/: SKILL.md
.claude/: .nfs00000000067921a100000003
.claude/agents/: writing-reviser.md
.codex/agents/: rough-drafter.toml  writing-reviser.toml
.harness/: implement.md  pending.md  plan.md  progress.md  spec.md
.harness/cli/: reset-progress  test-for
docs/01_Deep_Learning/: 01_Deep_Learning_Foundations.md  02_Approximation_and_Generalization.md
docs/02_Large_Language_Model/: 03_Architecture.md  04_Pre_Training.md
docs/supplymental/: 01_PyTorch.py
notebook/: 00_Complexodynamics.ipynb  00_Transformer.ipynb  01_Tokenize.ipynb  02_Tensor.ipynb  03_Architecture.ipynb  04_MOE.ipynb  05_GPUs.ipynb  06_CUDA.ipynb  07_Parallelism.ipynb  08_Parrallism-in-Practice.ipynb  09_Scaling-Laws.ipynb  10_Inference.ipynb  12_Evaluation.ipynb  13_Data.ipynb  14_Data_Filter.ipynb  15_Alignment.ipynb  16_RLVR.ipynb  benchmark_demo.py  benchmark_reduce_scatter_demo.py  collective_ops_demo.py  data_parallel_demo.py  parallel_utils.py  pipeline_parallel_demo.py  tensor_parallel_demo.py
scripts/: export_notebooks.py
src/: 00_Complexodynamics.py  00_Transformer.py  01_Tokenize.py  02_Tensor.py  03_Architecture.py  04_MOE.py  05_GPUs.py  06_CUDA.py  07_Parallelism.py  08_Parrallism-in-Practice.py  09_Scaling-Laws.py  10_Inference.py  12_Evaluation.py  13_Data.py  14_Data_Filter.py  15_Alignment.py  16_RLVR.py  17_RLVR2.py  sync_public_repo.py
(+41 files in other folders)
