[project]
name = "language-modeling-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

# ---- pytest ----
[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["test"]

# ---- ruff ----
[tool.ruff]
cache-dir = ".cache/ruff"