[project]
name = "Tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.2",
    "jaxtyping>=0.3.9",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

# ---- pytest ----
[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
testpaths = ["test"]

# ---- ruff ----
[tool.ruff]
cache-dir = ".cache/ruff"
